QQ-63: fix layout on mobile

--- a/src/app/modules/quote-page/components/quote-list/quote-list.component.scss
+++ b/src/app/modules/quote-page/components/quote-list/quote-list.component.scss
@@ -22,12 +22,8 @@
 
 .quote {
   position: relative;
-  transform: translateY(calc(0.5 * (var(--qq-bottom-bar-height) - var(--qq-header-height))));
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  text-align: center;
+  transform: translateY(calc(0.5 * (var(--qq-bottom-bar-height) - var(--qq-header-height))));
   background-color: var(--qq-color-bg-accent);
   border-radius: var(--qq-border-radius);
   box-shadow: var(--qq-box-shadow) var(--qq-color-element-brand);
@@ -36,7 +32,6 @@
   max-height: 100%;
   max-width: rhythm(250);
   min-width: rhythm(100);
-  padding: rhythm(12);
 
   @include mediaQuery(lg, xl) {
     max-width: rhythm(200);
@@ -44,16 +39,44 @@
 
   @include mediaQuery(md, lg) {
     max-width: rhythm(150);
-    padding: rhythm(10) rhythm(8);
   }
 
   @include mediaQuery(xs, md) {
     max-width: 100%;
     min-width: unset;
-    padding: rhythm(10) rhythm(5);
   }
 
   &__content {
+    align-items: center;
+    overflow-y: scroll;
+    overflow-x: hidden;
+    touch-action: pan-y !important;
+
+    padding-top: rhythm(10);
+    padding-left: rhythm(10);
+
+    @include mediaQuery(xs, lg) {
+      padding-left: rhythm(8);
+    }
+  }
+
+  &__actions {
+    position: relative;
+    padding: 2px 0;
+    width: rhythm(10);
+
+    @include mediaQuery(xs, lg) {
+      width: rhythm(8);
+    }
+  }
+}
+
+.content {
+  text-align: center;
+
+  &__text {
+    margin-bottom: rhythm(5);
+
     @include qq-font-family-heading(bold);
 
     @include qq-font-heading-3;
@@ -64,15 +87,14 @@
 
     @include mediaQuery(xs, lg) {
       @include qq-font-heading-5;
-      margin-bottom: rhythm(2);
     }
   }
 
   &__author {
-    position: absolute;
-    bottom: rhythm(1);
+    position: relative;
+    padding: 0 rhythm(4);
+    margin-bottom: rhythm(1);
     color: var(--qq-color-text-secondary);
-    white-space: nowrap;
     @include qq-font-heading-4;
 
     @include mediaQuery(lg, xl) {
@@ -83,13 +105,16 @@
       @include qq-font-heading-6;
     }
   }
+}
 
-  &__icon {
-    position: absolute;
+.actions {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
 
+  &__item {
     &__bookmark {
-      right: 0;
-      top: 0;
       color: var(--qq-color-element-brand);
       height: rhythm(12);
 
@@ -107,8 +132,6 @@
     }
 
     &__copy {
-      right: rhythm(1);
-      bottom: rhythm(1);
       height: rhythm(10);
 
       svg-icon {
