--- a/src/app/modules/user-layout/user-layout.component.scss
+++ b/src/app/modules/user-layout/user-layout.component.scss
@@ -130,7 +130,7 @@
   }
 
   &__photos {
-    position: absolute;
+    position: fixed;
     top: 0;
     left: 0;
     display: block;
